# TransitFlow

./: .gitignore  .graphify_detect.json  README.md  TransitFlow_Implementation_Plan.md  pyproject.toml  requirements.txt
artifacts/: CHAR5_GATE_AUDIT_2026-06-26.md  RESULTS_SUMMARY.md  RESULTS_SUMMARY_v2_realnoise.md  tf_real_pipeline.sh
artifacts/remote_char5_2026-06-26/: DATASET_MANIFEST.json
artifacts/vast_publishable_v2_2026-06-26/: SUMMARY.md
configs/: default.yaml  local.yaml  publishable.yaml  smoke.yaml
graphify-out/: .graphify_analysis.json  .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: _config.py  baseline_detection.py  benchmark_speed.py  build_noise_library.py  diagnose_period.py  evaluate.py  evaluate_corrected.py  generate_data.py  monitor.py  preflight.py  run_publishable_vast.py  smoke_test.py  train.py  train_spike_slab.py  validate_real.py
tests/: conftest.py  test_baselines.py  test_correction.py  test_data.py  test_end_to_end.py  test_evaluate_gates.py  test_evaluation.py  test_flow_matching.py  test_inference.py  test_models.py  test_noise.py  test_npe.py  test_periodogram.py  test_priors.py  test_simulator.py  test_spike_slab.py  test_training_run.py  test_transit_model.py  test_views.py
transitflow/: __init__.py  correction.py  data.py  flow_matching.py  inference.py  noise.py  priors.py  simulator.py  train.py  transit_model.py  utils.py  views.py
transitflow/baselines/: __init__.py  bls.py  mcmc.py
transitflow/evaluation/: __init__.py  coverage.py  (+3 more)
(+28 files in other folders)
