[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transitflow"
version = "0.1.0"
description = "Amortized flow-matching simulation-based inference for joint exoplanet transit detection and parameter posteriors"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TransitFlow authors" }]
keywords = ["exoplanets", "transit", "simulation-based-inference",
            "flow-matching", "normalizing-flows", "astronomy"]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "torch>=2.1",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
physics = ["batman-package>=2.4", "torchdiffeq>=0.2.3", "zuko>=1.0", "celerite2>=0.2"]
baselines = ["astropy>=5.3", "corner>=2.2", "emcee>=3.1", "arviz>=0.16"]
data = ["lightkurve>=2.4"]
monitoring = ["tensorboard>=2.10"]
dev = ["pytest>=7.4"]
all = [
    "batman-package>=2.4", "torchdiffeq>=0.2.3", "zuko>=1.0", "celerite2>=0.2",
    "astropy>=5.3", "corner>=2.2", "emcee>=3.1", "arviz>=0.16",
    "lightkurve>=2.4", "tensorboard>=2.10", "pytest>=7.4",
]

[tool.setuptools.packages.find]
include = ["transitflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
